tests/should-fail/shadowing/shadow-array-2.j
function foo takes integer x returns nothing
    local integer array x
endfunction
